second upgrade to safeir integration